@@ -56,6 +56,9 @@ IN DEVELOPMENT
    * Fall back to showing e-mail in ``log --short/--line`` if the committer/author has
      only e-mail. (Lukáš Lalinský, #157026)
 
+   * Implement _make_parents_provider on RemoteRepository, allowing generating
+     bundles against branches on a smart server.  (Andrew Bennetts, #147836)
+
   API BREAKS:
 
    * Deprecate not passing a ``location`` argument to commit reporters'
